# conductor

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/commands/: init-agent.md
.cursor/rules/: index.mdc  python-style.mdc  shell-safety.mdc
.github/: copilot-instructions.md
crewai/: __init__.py  run_logger.py
crewai/tools/: __init__.py  factory.py  safe_shell.py
docs/: DESIGN.md  README.md  TASKS.md  decisions.md
scripts/: setup_worktrees.sh
src/: .gitkeep
tests/: .gitkeep  test_run_logger.py  test_safe_shell.py
